WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
171250
REGRESSION (Safari 10.1): When 'transition' contains -ms-transform, transform-origin is also transitioned
https://bugs.webkit.org/show_bug.cgi?id=171250
Summary
REGRESSION (Safari 10.1): When 'transition' contains -ms-transform, transform...
franpaco86
Reported
2017-04-24 14:43:31 PDT
When you inform, for example: transition: -ms-transform 1s ease, transform 1s ease; for an element, its transform-origin is algo transitioned. A working example:
https://jsfiddle.net/3umthzxh/6/
It worked on the last version of Safari bundled with macOS 10.12.3, after upgrading to macOS 10.12.4 the bug appeared. The bug is in WebKit 12603.1.30.0.34,
r215681
too.
Attachments
patch
(13.77 KB, patch)
2017-05-04 11:50 PDT
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2017-04-25 18:44:16 PDT
<
rdar://problem/31827243
>
Simon Fraser (smfr)
Comment 2
2017-04-26 10:00:09 PDT
I think we're falling back to transitioning "all". Not sure if that's per spec.
Simon Fraser (smfr)
Comment 3
2017-04-26 11:09:50 PDT
Spec says: "If one of the identifiers listed is not a recognized property name or is not an animatable property, the implementation must still start transitions on the animatable properties in the list using the duration, delay, and timing function at their respective indices in the lists for transition-duration, transition-delay, and transition-timing-function. In other words, unrecognized or non-animatable properties must be kept in the list to preserve the matching of indices." so we're wrong here.
Antti Koivisto
Comment 4
2017-05-04 11:50:56 PDT
Created
attachment 309072
[details]
patch
Geoffrey Garen
Comment 5
2017-05-04 11:53:22 PDT
Comment on
attachment 309072
[details]
patch r=me
WebKit Commit Bot
Comment 6
2017-05-04 13:16:04 PDT
Comment on
attachment 309072
[details]
patch Clearing flags on attachment: 309072 Committed
r216204
: <
http://trac.webkit.org/changeset/216204
>
WebKit Commit Bot
Comment 7
2017-05-04 13:16:06 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug